--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@ lerna-debug.log*
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
-node_modules
+
+node_modules/
