modified:   packages/bridgette-core/package.json 	new file:   packages/contracts/build/contracts/Deposit.json 	new file:   packages/contracts/build/contracts/Migrations.json 	new file:   packages/contracts/build/contracts/SafeMath.json 	new file:   packages/contracts/build/contracts/Split.json 	new file:   packages/contracts/build/contracts/bottoken.json 	new file:   packages/contracts/build/contracts/btoken.json 	new file:   packages/contracts/build/contracts/eventTracker.json 	new file:   packages/contracts/build/contracts/faucet.json 	new file:   packages/contracts/build/contracts/owned.json 	new file:   packages/contracts/contracts/Migrations.sol 	new file:   packages/contracts/contracts/bottoken.sol 	new file:   packages/contracts/contracts/btoken.sol 	new file:   packages/contracts/contracts/eventTracker.sol 	new file:   packages/contracts/contracts/faucet.sol 	new file:   packages/contracts/contracts/faucet2.sol 	new file:   packages/contracts/contracts/splitter.sol 	new file:   packages/contracts/migrations/1_real_migration.js 	new file:   packages/contracts/migrations/2_bottoken_Deployment.js 	new file:   packages/contracts/package.json 	new file:   packages/contracts/test/bottoken.js 	new file:   packages/contracts/test/exceptions.js 	new file:   packages/contracts/truffle-config.js 	new file:   packages/contracts/truffle.js 	modified:   packages/santaBot/package.json 	modified:   yarn.lock

--- a/packages/santaBot/package.json
+++ b/packages/santaBot/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "santabot",
+  "name": "@chippr-bots/santabot",
   "version": "1.1.4",
   "description": "a twitter image classifer bridge",
   "main": "index.js",
