--- a/packages/bridgette-core/package.json
+++ b/packages/bridgette-core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bridgette-etc-core",
+  "name": "@chippr-bots/bridgette-etc-core",
   "version": "1.1.4",
   "description": "",
   "main": "index.js",
