modified:   .gitignore 	modified:   packages/bridgette-v1/common/index.js 	modified:   packages/bridgette-v1/funcs/version.js 	modified:   packages/bridgette-v1/index.js         modified:   packages/bridgette-v1/package.json 	modified:   packages/contracts/build/contracts/Deposit.json 	modified:   packages/contracts/build/contracts/Migrations.json 	modified:   packages/contracts/build/contracts/SafeMath.json 	modified:   packages/contracts/build/contracts/Split.json 	modified:   packages/contracts/build/contracts/bottoken.json 	modified:   packages/contracts/build/contracts/btoken.json 	modified:   packages/contracts/build/contracts/eventTracker.json 	modified:   packages/contracts/build/contracts/faucet.json 	modified:   packages/contracts/build/contracts/owned.json 	modified:   packages/contracts/truffle.js 	deleted:    packages/santaBot/node_modules/dotenv/CHANGELOG.md 	deleted:    packages/santaBot/node_modules/dotenv/LICENSE 	deleted:    packages/santaBot/node_modules/dotenv/README.md 	deleted:    packages/santaBot/node_modules/dotenv/config.js 	deleted:    packages/santaBot/node_modules/dotenv/lib/cli-options.js 	deleted:    packages/santaBot/node_modules/dotenv/lib/env-options.js 	deleted:    packages/santaBot/node_modules/dotenv/lib/main.js 	deleted:    packages/santaBot/node_modules/dotenv/package.json 	deleted:    packages/santaBot/node_modules/dotenv/types/index.d.ts 	deleted:    packages/santaBot/node_modules/dotenv/types/test.ts 	deleted:    packages/santaBot/node_modules/dotenv/types/tsconfig.json 	deleted:    packages/santaBot/node_modules/dotenv/types/tslint.json 	modified:   yarn.lock

--- a/packages/bridgette-v1/package.json
+++ b/packages/bridgette-v1/package.json
@@ -5,5 +5,10 @@
   "main": "index.js",
   "author": "chippr robotics",
   "license": "apache-2",
-  "private": false
+  "private": false,
+  "dependencies": {
+    "discord.io-gateway6": "^2.5.3",
+    "dotenv": "^8.2.0",
+    "joi": "^14.3.1"
+  }
 }
