--- a/packages/santaBot/package.json
+++ b/packages/santaBot/package.json
@@ -10,6 +10,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "ibm-watson": "^5.2.1",
     "kafka": "^0.2.3",
     "twitter": "^1.7.1"
   }
