modified:   packages/bridgette-v1/package.json 	modified:   packages/bridgette-v1/test/version.js 	modified:   yarn.lock

--- a/packages/bridgette-v1/package.json
+++ b/packages/bridgette-v1/package.json
@@ -6,6 +6,11 @@
   "author": "chippr robotics",
   "license": "apache-2",
   "private": false,
+  "scripts": {
+    "start": "mocha --exit && node index.js",
+    "test": "mocha --exit",
+    "stop": "forever stop index.js"
+  },
   "dependencies": {
     "discord.io-gateway6": "^2.5.3",
     "dotenv": "^8.2.0",
