--- a/packages/attestation/package.json
+++ b/packages/attestation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "attestation",
+  "name": "@chippr-bots/attestation",
   "version": "1.1.8",
   "description": "attestations of MPC ceremonies ",
   "main": "index.js",
