--- a/packages/bridgette-v1/package.json
+++ b/packages/bridgette-v1/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "discord.io-gateway6": "^2.5.3",
     "dotenv": "^8.2.0",
-    "joi": "^14.3.1"
+    "joi": "^14.3.1",
+    "mocha": "^6.2.2",
+    "web3": "^1.2.4",
+    "winston": "^3.2.1"
   }
 }
