modified:   dapps/index.js 	modified:   funcs/forkit.js 	modified:   index.js 	modified:   package.json

--- a/packages/bridgette-v1/package.json
+++ b/packages/bridgette-v1/package.json
@@ -7,7 +7,7 @@
   "license": "apache-2",
   "private": false,
   "scripts": {
-    "start": "mocha --exit && node index.js",
+    "start": "node index.js",
     "test": "mocha --exit",
     "stop": "forever stop index.js"
   },
