--- a/packages/bridgette-v1/package.json
+++ b/packages/bridgette-v1/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "joi": "^14.3.1",
     "mocha": "^6.2.2",
+    "twitter": "^1.7.1",
     "web3": "^1.2.4",
     "winston": "^3.2.1"
   }
