--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "private": true,
+  "version": "1.0.0",
+  "private": false,
   "workspaces": [
     "packages/*"
   ],
   "scripts": {
     "test": "lerna run test",
-    "new-version": "lerna version --conventional-commits --yes",
+    "new-version": "lerna version --conventional-commits --yes && npm publish",
     "diff": "lerna diff"
     },
   "name": "chippr-bots",
