--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "workspaces": [
     "packages/*"
   ],
   "scripts": {
     "test": "lerna run test",
-    "new-version": "lerna version --conventional-commits --yes && npm publish",
+    "new-version": "lerna version --conventional-commits --yes",
     "diff": "lerna diff"
-    },
+  },
   "name": "chippr-bots",
   "devDependencies": {
-      "lerna": "^3.19.0"
+    "lerna": "^3.19.0"
   }
 }
