modified:   package.json 	modified:   packages/bridgette-twitter/index.js 	modified:   packages/bridgette-twitter/package.json 	modified:   yarn.lock 	packages/bridgette-v1/common/canRes.json 	packages/bridgette-v1/common/prime.js 	packages/bridgette-v1/common/twitter.js 	packages/bridgette-v1/data.json 	packages/bridgette-v1/twitter/ 	packages/common/blkState.js 	packages/common/botUnits.js 	packages/common/canRes.json 	packages/common/discord.js 	packages/common/etherNode.js 	packages/common/forks.json 	packages/common/index.js 	packages/common/logger.js 	packages/common/prime.js 	packages/common/twitter.js 	packages/common/watson.js 	packages/common/wordlist.json

--- a/packages/bridgette-twitter/package.json
+++ b/packages/bridgette-twitter/package.json
@@ -6,8 +6,10 @@
   "license": "Apache-2.0",
   "private": false,
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ipfs": "^0.40.0",
     "ipfs-http-client": "^40.1.0",
-    "orbit-db": "^0.23.0"
+    "orbit-db": "^0.23.0",
+    "twitter": "^1.7.1"
   }
 }
