new file:   packages/bridgette-api/CHANGELOG.md 	new file:   packages/bridgette-api/Dockerfile 	new file:   packages/bridgette-api/README.MD 	new file:   packages/bridgette-api/dapps/atlantis.js 	new file:   packages/bridgette-api/dapps/dapp.json 	new file:   packages/bridgette-api/dapps/donate.js 	new file:   packages/bridgette-api/dapps/etcmail.js 	new file:   packages/bridgette-api/dapps/eventLog.js 	new file:   packages/bridgette-api/dapps/gasgetter.js 	new file:   packages/bridgette-api/dapps/getetc.js 	new file:   packages/bridgette-api/dapps/index.js 	new file:   packages/bridgette-api/dapps/multi-sig.js 	new file:   packages/bridgette-api/dapps/role.js 	new file:   packages/bridgette-api/dapps/statebot.js 	new file:   packages/bridgette-api/dapps/tipper.js 	new file:   packages/bridgette-api/data.json 	new file:   packages/bridgette-api/funcs/error.js 	new file:   packages/bridgette-api/funcs/forkName.js 	new file:   packages/bridgette-api/funcs/forkit.js 	new file:   packages/bridgette-api/funcs/getBalance.js 	new file:   packages/bridgette-api/funcs/getBlock.js 	new file:   packages/bridgette-api/funcs/getGasPrice.js 	new file:   packages/bridgette-api/funcs/getTXR.js 	new file:   packages/bridgette-api/funcs/getTXR.js.save 	new file:   packages/bridgette-api/funcs/getTransactions.js 	new file:   packages/bridgette-api/funcs/getblocknumber.js 	new file:   packages/bridgette-api/funcs/index.js 	new file:   packages/bridgette-api/funcs/sendSignedTransaction.js 	new file:   packages/bridgette-api/funcs/test.js 	new file:   packages/bridgette-api/funcs/version.js 	new file:   packages/bridgette-api/help/bridgette.js 	new file:   packages/bridgette-api/help/donatehelp.js 	new file:   packages/bridgette-api/help/etcmailhelp.js 	new file:   packages/bridgette-api/help/index.js 	new file:   packages/bridgette-api/help/tipperError.js 	new file:   packages/bridgette-api/index.js 	new file:   packages/bridgette-api/package.json 	new file:   packages/bridgette-api/tes

--- a/packages/bridgette-api/package.json
+++ b/packages/bridgette-api/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@chippr-bots/bridgette-v1",
+  "name": "@chippr-bots/bridgette-api",
   "version": "1.1.19",
-  "description": "discord bridgette functions",
+  "description": "api for bridgette functions",
   "main": "index.js",
   "author": "chippr robotics",
   "license": "apache-2",
@@ -15,6 +15,7 @@
     "@chippr-bots/common": "^1.1.20",
     "discord.io-gateway6": "^2.5.3",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "joi": "^14.3.1",
     "mocha": "^6.2.2",
     "twitter": "^1.7.1",
