--- a/packages/bridgette-twitter/package.json
+++ b/packages/bridgette-twitter/package.json
@@ -5,11 +5,14 @@
   "author": "chippr robotics llc",
   "license": "Apache-2.0",
   "private": false,
+  "scripts": {
+    "start": "node index.js",
+    "test": "mocha --exit",
+    "stop": "forever stop index.js"
+  },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "ipfs": "^0.40.0",
-    "ipfs-http-client": "^40.1.0",
-    "orbit-db": "^0.23.0",
-    "twitter": "^1.7.1"
+    "twitter": "^1.7.1",
+    "@chippr-bots/common":"^1.1.1"
   }
 }
