--- a/packages/bridgette-api/package.json
+++ b/packages/bridgette-api/package.json
@@ -19,6 +19,7 @@
     "joi": "^14.3.1",
     "mocha": "^6.2.2",
     "twitter": "^1.7.1",
+    "uuid": "^3.3.3",
     "web3": "^1.2.4",
     "winston": "^3.2.1"
   }
