--- a/packages/bridgette-core/package.json
+++ b/packages/bridgette-core/package.json
@@ -11,6 +11,7 @@
   "author": "bcrd",
   "license": "Apache-2.0",
   "dependencies": {
+    "@chippr-bots/common": "^1.1.20",
     "actions-on-google": "^2.9.1",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
