--- a/packages/bridgette-v1/package.json
+++ b/packages/bridgette-v1/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@chippr-bots/common": "^1.1.24",
+    "@chippr-bots/contracts": "^1.1.24",
     "discord.io-gateway6": "^2.5.3",
     "dotenv": "^8.2.0",
     "joi": "^14.3.1",
