--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -7,6 +7,7 @@
   "license": "Apache-2.0",
   "private": false,
   "dependencies": {
+    "@chippr-bots/contracts" : "^1.1.26",
     "discord.io-gateway6": "^2.5.3",
     "qr-image": "^3.2.0",
     "request": "^2.88.0",
