--- a/packages/bridgette-twitter/package.json
+++ b/packages/bridgette-twitter/package.json
@@ -11,6 +11,7 @@
     "stop": "forever stop index.js"
   },
   "dependencies": {
+    "@chippr-bots/bridgettedb": "^1.1.34",
     "@chippr-bots/common": "^1.1.34",
     "dotenv": "^8.2.0",
     "twitter": "^1.7.1"
