--- a/packages/bridgetteDB/package.json
+++ b/packages/bridgetteDB/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "bridgetteDB",
+  "name": "@chippr-bots/bridgettedb",
   "version": "1.1.34",
   "description": "blockchain based kvs db",
   "main": "index.js",
   "author": "chippr=robotics llc",
   "license": "Apache-2.0",
+  "private": false,
   "dependencies": {
     "@chippr-bots/common": "^1.1.34",
     "@chippr-bots/contracts": "^1.1.26"
