--- a/packages/bridgetteDB/package.json
+++ b/packages/bridgetteDB/package.json
@@ -8,6 +8,7 @@
   "private": false,
   "dependencies": {
     "@chippr-bots/common": "^1.1.38",
-    "@chippr-bots/contracts": "^1.1.26"
+    "@chippr-bots/contracts": "^1.1.26",
+    "web3": "^1.2.6"
   }
 }
