--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -15,6 +15,7 @@
     "twitter": "^1.7.1",
     "uuid": "^3.3.3",
     "web3": "^1.2.4",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "winston-elasticsearch": "^0.9.0"
   }
 }
