--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -8,6 +8,7 @@
   "private": false,
   "dependencies": {
     "@chippr-bots/contracts": "^1.1.26",
+    "@elastic/elasticsearch": "^7.8.0",
     "discord.io-gateway6": "^2.5.3",
     "qr-image": "^3.2.0",
     "request": "^2.88.0",
