--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@chippr-bots/contracts": "^1.1.26",
     "@elastic/elasticsearch": "^7.8.0",
+    "amqplib": "^0.6.0",
     "discord.io-gateway6": "^2.5.3",
     "qr-image": "^3.2.0",
     "request": "^2.88.0",
