--- a/packages/compose/bridgette/docker-compose.yml
+++ b/packages/compose/bridgette/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.2'
 
 services:
   core:
-    image: chipprbots/bridgette-core
+    image: ${BRIDGETTE_IMAGE}
     volumes:
       - type: bind
         source: "${CORE_SRC}"
