--- a/packages/testnets/mordor/docker-compose.yml
+++ b/packages/testnets/mordor/docker-compose.yml
@@ -8,7 +8,7 @@ services:
         source: ${KT_ROOT_DIR}
         target: /root
     command: >
-               --mordor
+               --classic
                --miner.etherbase ${MINER_ETHERBASE}
                --miner.extradata '${MINER_EXTRADATA}'
                --mine
