--- a/packages/compose/teku/prom.yml
+++ b/packages/compose/teku/prom.yml
@@ -3,7 +3,7 @@ global:
 scrape_configs:
   - job_name: "prometheus"
     static_configs:
-    - targets: ["${PROM_IP}:9090"]
+    - targets: ["${PROM_IP}:${PROM_PORT}"]
   - job_name: "teku-dev"
     scrape_timeout: 10s
     metrics_path: /metrics
