add nat docker support

--- a/packages/compose/teku/docker-compose.yml
+++ b/packages/compose/teku/docker-compose.yml
@@ -17,6 +17,7 @@ services:
                --rpc-http-cors-origins=${BESU_CORS_ORIGINS}
                --rpc-http-host=0.0.0.0
                --host-whitelist="${BESU_HOST_WHITELIST}"
+               --nat-method="Docker"
                --metrics-enabled
     ports:
       - '${BESU_RPC_PORT}:8545'
@@ -38,12 +39,14 @@ services:
   
   teku_node:
     image: ${TEKU_IMAGE}
-    command: ["--network=${TEKU_NETWORK}",
-              "--eth1-endpoint=http://besu_node:${RPC_PORT}",
-              "--validator-keys=/opt/teku/data/validator/keys:/opt/teku/data/validator/passwords",
-              "--p2p-port=9000",
-              "--rest-api-enabled=true",
-              "--rest-api-docs-enabled=true"]
+    command: >
+              --network=${TEKU_NETWORK}
+              --eth1-endpoint=http://besu_node:${RPC_PORT}
+              --validator-keys=/opt/teku/data/validator/keys:/opt/teku/data/validator/passwords
+              --p2p-port=9000
+              --rest-api-enabled=true
+              --rest-api-docs-enabled=true
+              --nat-method="Docker"
     depends_on:
       - besu_node
     volumes:
