--- a/packages/compose/teku/docker-compose.yml
+++ b/packages/compose/teku/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     ports:
       - '${BESU_RPC_PORT}:8545'
       - '${BESU_WS_PORT}:8546'
-      - '${BESU_P2P_PORT}:${BESU_P2P_PORT}30303'
+      - '${BESU_P2P_PORT}:30303'
       - '${BESU_METRIC_PORT}:9545'
     #logging:
     #  driver: gelf
