--- a/packages/compose/mina/docker-compose.snarker.yml
+++ b/packages/compose/mina/docker-compose.snarker.yml
@@ -18,6 +18,8 @@ services:
              --file-log-level "${MINA_FILE_LOG_LEVEL}"
              --log-level "${MINA_LOGLEVEL}" 
              --peer-list-url "${MINA_PEER_LIST_URL}"
+             --run-snark-worker "${MINA_PUBLIC_KEY}" 
+             --snark-worker-fee "${MINA_SNARK_FEE}"
     ports:
       - "${MINA_P2P}:8302"
       - "${MINA_API}:3085"
