--- a/packages/compose/mina/docker-compose.yml
+++ b/packages/compose/mina/docker-compose.yml
@@ -9,10 +9,14 @@ services:
       - type: bind
         source: "${MINA_CONFIG_DIR}"
         target: /root/.mina-config/
+      - type: bind
+        source: "${MINA_WORK_DIR}"
+        target: /mina
     environment:
       CODA_PRIVKEY_PASS: "${MINA_PRIVKEY_PASS}"
     command: >
              daemon
+             --working-dir /mina
              --insecure-rest-server 
              --file-log-level "${MINA_FILE_LOG_LEVEL}"
              --log-level "${MINA_LOGLEVEL}" 
