--- a/packages/compose/mina/docker-compose.yml
+++ b/packages/compose/mina/docker-compose.yml
@@ -11,12 +11,11 @@ services:
         target: /root/.mina-config/
       - type: bind
         source: "${MINA_WORK_DIR}"
-        target: /mina
+        target: /var/lib/coda/
     environment:
       CODA_PRIVKEY_PASS: "${MINA_PRIVKEY_PASS}"
     command: >
              daemon
-             --working-dir /mina
              --insecure-rest-server 
              --file-log-level "${MINA_FILE_LOG_LEVEL}"
              --log-level "${MINA_LOGLEVEL}" 
