--- a/packages/compose/mina/docker-compose.yml
+++ b/packages/compose/mina/docker-compose.yml
@@ -9,6 +9,9 @@ services:
       - type: bind
         source: "${MINA_CONFIG_DIR}"
         target: /root/.mina-config/
+      - type: bind
+        source: "${MINA_WORK_DIR}"
+        target: /var/lib/coda/
     environment:
       CODA_PRIVKEY_PASS: "${MINA_PRIVKEY_PASS}"
     command: >
@@ -16,7 +19,7 @@ services:
              --insecure-rest-server 
              --file-log-level "${MINA_FILE_LOG_LEVEL}"
              --log-level "${MINA_LOGLEVEL}" 
-             --peer-list-url "${MINA_PEER_LIST_URL}"
+             --peer-list-url "${MINA_PEER_LIST}"
              --external-ip "${MINA_EXT_IP}"
     ports:
       - "${MINA_P2P}:8302"
