--- a/packages/bridgette-v1/package.json
+++ b/packages/bridgette-v1/package.json
@@ -16,6 +16,7 @@
     "@chippr-bots/contracts": "^1.1.26",
     "chai": "^4.2.0",
     "discord.io-gateway6": "^2.5.3",
+    "discord.js": "^13.3.1",
     "dotenv": "^8.2.0",
     "joi": "^14.3.1",
     "mocha": "^6.2.2",
