--- a/packages/compose/bridgette/docker-compose.yml
+++ b/packages/compose/bridgette/docker-compose.yml
@@ -13,14 +13,52 @@ services:
       - DISCORD_TOKEN=${CORE_DISCORD_TOKEN}
       - BRIDGETTE_ADDRESS=${CORE_BRIDGETTE_ADDR}
       - BRIDGETTE_PW=${CORE_BRIDGETTE_PW}
+      - BTC_NODE=${CORE_BTC_NODE}
+      - BTC_USER=${CORE_BTC_USER}
+      - BTC_PASS=${CORE_BTC_PASS}
+      - ZEC_NODE=${CORE_ZEC_NODE}
+      - ZEC_USER=${CORE_ZEC_USER}
+      - ZEC_PASS=${CORE_ZEC_PASS}
+      - ETC_NODE=${CORE_ETC_NODE}
       - KOTTI_NODE=${CORE_KOTTI_NODE}
       - TICKERFEED=${CORE_TICKERFEED}
+      - BS_SAT_API=${CORE_BS_SAT_API}
+      - IMAGE_URL=${CORE_IMAGE_URL}
+      - PORT=3400
       - VAULT_KEY=${CORE_VAULT_KEY}
       - VAULT_CERT=${CORE_VAULT_CERT}
       - ESEARCH_HOST=${DB_ESEARCH_HOST}
+    ports:
+     - "${CORE_API_PORT}:3400"
+    logging:
+      driver: gelf
+      options:
+        tag: ${GELF_TAG}
+        gelf-address: "${GELF_ADDRESS}"
     deploy:
       mode: replicated
       replicas: 1
       restart_policy:
         condition: any
         
+  discord_bridge:
+    image: ${DB_IMAGE}
+    environment:
+     - PROJECT_ID=${DB_PROJECT_ID}
+     - DISCORD_TOKEN=${DB_DISCORD_TOKEN}
+     - DISCORD_PREFIX=${DB_DISCORD_PREFIX}
+     - DISCORD_HELP_MESSAGE=${DB_DISCORD_HELP}
+     - ESEARCH_HOST=${DB_ESEARCH_HOST}
+     - GOOGLE_APPLICATION_CREDENTIALS=${DB_GOOG}
+     - VAULT_TOKEN=${DB_VAULT_TOKEN}
+    logging:
+      driver: gelf
+      options:
+        tag: ${GELF_TAG}
+        gelf-address: "${GELF_ADDRESS}"
+    deploy:
+      mode: replicated
+      replicas: 1
+      restart_policy:
+        condition: any
+
