increase mem for bitcoindb to improve sync speed

--- a/packages/compose/btc-lightning/docker-compose.yml
+++ b/packages/compose/btc-lightning/docker-compose.yml
@@ -17,6 +17,7 @@ services:
         server=1
         rpcuser=${BTC_RPC_USER}
         rpcpassword=${BTC_RPC_PW}
+        dbcache=4000
     ports:
       - "${BTC_PORT}:8333"
     logging:
